--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Mist",
   "version": "0.9.0",
   "license": "GPL-3.0",
-  "author": "Ethereum Mist Team <mist@ethereum.org>",
+  "author": "WhaleCoin Mist Team <mist@ethereum.org>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethereum/mist.git"
+    "url": "https://github.com/WhaleCoinOrg/mist.git"
   },
   "scripts": {
     "postinstall": "cd interface && yarn"
